src/test/deca/context/invalid/our_tests/jb-void-DeclVar.deca
// Description:
//    Declaring void variable
//
// Resultats:
//    Should throw contextual error (rule 3.17)
//
// Historique:
//    cree le 23/01/2017

{
    void a;
}
